some UI development

--- a/yobsi/Base.lproj/Main.storyboard
+++ b/yobsi/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ebN-qd-BHO">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Yobsi-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RequestViewController" customModule="yobsi" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,174 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6dO-hm-GKE">
+                                <rect key="frame" x="276" y="532" width="48" height="48"/>
+                                <state key="normal" image="icon-help">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="176" y="532" width="48" height="48"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="zdy-CZ-Jgu" kind="show" id="9MG-oj-dka"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Need a Service?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FQB-8f-CnR">
+                                <rect key="frame" x="221" y="86" width="158.5" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="6dO-hm-GKE" secondAttribute="centerX" id="NS0-HU-knZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6dO-hm-GKE" secondAttribute="bottom" constant="20" id="aKF-84-Xq3"/>
+                            <constraint firstItem="FQB-8f-CnR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="22" id="oEM-4D-hlU"/>
+                            <constraint firstAttribute="centerX" secondItem="FQB-8f-CnR" secondAttribute="centerX" constant="-0.25" id="wFV-WC-9aI"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Yobsi" id="80l-Go-Avc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1323" y="1111"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lHQ-4b-Se0">
+            <objects>
+                <viewController id="Ydk-3z-J8d" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="04b-k0-JTt"/>
+                        <viewControllerLayoutGuide type="bottom" id="CbM-lI-fc7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="S6g-zm-eOf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calling ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNr-XA-hmm">
+                                <rect key="frame" x="269" y="289" width="72" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="pNr-XA-hmm" secondAttribute="centerX" constant="-5" id="GLG-Mw-csk"/>
+                            <constraint firstAttribute="centerY" secondItem="pNr-XA-hmm" secondAttribute="centerY" constant="0.5" id="ePK-df-JZQ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bvg-0K-YOR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2120" y="1913"/>
+        </scene>
+        <!--Prepare a Request-->
+        <scene sceneID="5r8-vV-7Dn">
+            <objects>
+                <viewController id="zdy-CZ-Jgu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qx2-Xc-t5E"/>
+                        <viewControllerLayoutGuide type="bottom" id="ok6-k5-CZW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JKP-HK-YOw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search for a professional or job to be done..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rBB-4b-Sf3">
+                                <rect key="frame" x="16" y="115" width="568" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sbv-Rx-kXI" userLabel="containerView">
+                                <rect key="frame" x="16" y="153" width="568" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPS-iQ-vZ5" userLabel="locationButton">
+                                        <rect key="frame" x="8" y="8" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="9Wd-q1-1Ji"/>
+                                            <constraint firstAttribute="height" constant="24" id="HhC-0y-34E"/>
+                                        </constraints>
+                                        <state key="normal" image="icon-location">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6U-Mq-hYe" userLabel="cameraButton">
+                                        <rect key="frame" x="272" y="8" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="3Td-7D-ajG"/>
+                                            <constraint firstAttribute="width" constant="24" id="Xax-ET-LVW"/>
+                                        </constraints>
+                                        <state key="normal" image="icon-camera">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DQx-ea-7qu" userLabel="albumButton">
+                                        <rect key="frame" x="536" y="8" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="G93-Zr-h46"/>
+                                            <constraint firstAttribute="width" constant="24" id="vXP-xw-uI5"/>
+                                        </constraints>
+                                        <state key="normal" image="icon-album">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="dPS-iQ-vZ5" secondAttribute="centerY" id="2Om-JO-AGV"/>
+                                    <constraint firstAttribute="centerX" secondItem="q6U-Mq-hYe" secondAttribute="centerX" id="4oG-3J-Aif"/>
+                                    <constraint firstAttribute="height" constant="40" id="JKp-iZ-DMo"/>
+                                    <constraint firstAttribute="trailing" secondItem="DQx-ea-7qu" secondAttribute="trailing" constant="8" id="L5I-GZ-o6k"/>
+                                    <constraint firstAttribute="centerY" secondItem="q6U-Mq-hYe" secondAttribute="centerY" id="NJN-Yl-BiU"/>
+                                    <constraint firstItem="dPS-iQ-vZ5" firstAttribute="leading" secondItem="Sbv-Rx-kXI" secondAttribute="leading" constant="8" id="ite-3H-IPt"/>
+                                    <constraint firstAttribute="centerY" secondItem="DQx-ea-7qu" secondAttribute="centerY" id="ryK-bH-SNX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rBB-4b-Sf3" firstAttribute="leading" secondItem="JKP-HK-YOw" secondAttribute="leadingMargin" id="6Te-4a-QCI"/>
+                            <constraint firstItem="rBB-4b-Sf3" firstAttribute="trailing" secondItem="JKP-HK-YOw" secondAttribute="trailingMargin" id="C8p-0J-wA4"/>
+                            <constraint firstItem="rBB-4b-Sf3" firstAttribute="top" secondItem="Qx2-Xc-t5E" secondAttribute="bottom" constant="51" id="ToH-m9-DrJ"/>
+                            <constraint firstItem="Sbv-Rx-kXI" firstAttribute="top" secondItem="rBB-4b-Sf3" secondAttribute="bottom" constant="8" id="b1C-4D-Mlg"/>
+                            <constraint firstItem="Sbv-Rx-kXI" firstAttribute="trailing" secondItem="JKP-HK-YOw" secondAttribute="trailingMargin" id="gOn-JW-KFQ"/>
+                            <constraint firstItem="Sbv-Rx-kXI" firstAttribute="leading" secondItem="JKP-HK-YOw" secondAttribute="leadingMargin" id="q00-6t-3e6"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Prepare a Request" id="FGe-aV-4Bq">
+                        <barButtonItem key="rightBarButtonItem" title="Call" id="Vok-CI-sUH"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Zi-ry-isZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2120" y="1111"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rzy-Ke-yWf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ebN-qd-BHO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oxO-cI-fer">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Saf-vu-W7e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="db7-ZO-Di8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="529" y="1111"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon-album" width="48" height="48"/>
+        <image name="icon-camera" width="48" height="48"/>
+        <image name="icon-help" width="48" height="48"/>
+        <image name="icon-location" width="48" height="48"/>
+    </resources>
 </document>
